<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height">

        <TextView
            android:id="@+id/tv_item_number"
            android:layout_width="@dimen/list_half_size"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/number_one"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_extra"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/tv_item_number"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_medium_small"
            android:paddingEnd="@dimen/padding_zero"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/tv_item_count"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding_medium_small"
                    android:paddingEnd="@dimen/padding_zero"
                    android:text="@string/item_name"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_item_count"
                    android:layout_width="@dimen/list_half_size"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="@string/item_eight"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_store_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding_medium_small"
                    android:paddingEnd="@dimen/padding_zero"
                    android:text="@string/shop_name"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_item_amount"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/half_second"
                        android:layout_toStartOf="@id/tv_item_ks"
                        android:gravity="center_vertical|end"
                        android:text="@string/item_amount"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/tv_item_ks"
                        android:layout_width="@dimen/half_second"
                        android:layout_height="@dimen/half_second"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:text="@string/unit_ks"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/tv_total_amount"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/half_second"
                        android:layout_below="@id/tv_item_amount"
                        android:layout_toStartOf="@id/tv_item_ks"
                        android:gravity="center_vertical|end"
                        android:text="@string/total_amount"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/tv_total_ks"
                        android:layout_width="@dimen/half_second"
                        android:layout_height="@dimen/half_second"
                        android:layout_below="@id/tv_item_ks"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:text="@string/unit_ks"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_medium" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>